@@ -2,6 +2,10 @@ GenericSetup Product Changelog
 
   GenericSetup 1.3.4 (unreleased)
 
+    - Provide default for dependencies when processing metadata.xml, to
+      avoid a KeyError.
+      (https://bugs.launchpad.net/zope-cmf/+bug/255301)
+
     - During object manager imports do not throw an error when
       trying to remove an object that was already removed.
 
